--- a/html/about.html
+++ b/html/about.html
@@ -25,18 +25,19 @@
             <span>Швейное производство в Санкт-Петербурге</span>
         </div>
         <div class="top-menu-buttons">
-            <a id="mobile-toggle" href="#"><span>&#9776;</span></a>
+
             <a href="#" class="btn">подробнее</a>
             <a href="#"><img src="img/top-phone.png" alt=""></a>
+            <a id="mobile-toggle" href="#"><span>&#9776;</span></a>
 
         </div>
     </div>
     <div id="mobile-menu">
         <ul>
-            <li>о нас</li>
-            <li>услуги</li>
-            <li>портфолио</li>
-            <li>контакты</li>
+            <li><a href="#">о нас</a></li>
+            <li><a href="#">услуги</a></li>
+            <li><a href="#">портфолио</a></li>
+            <li><a href="#">контакты</a></li>
         </ul>
     </div>
 </header>
