--- a/html/services.html
+++ b/html/services.html
@@ -21,13 +21,14 @@
         </nav>
 
         <div class="logo">
-            <p>Avispa</p>
+            <img src="img/logo.jpg" alt="Швейное производство в Санкт-Петербурге">
             <span>Швейное производство в Санкт-Петербурге</span>
         </div>
         <div class="top-menu-buttons">
-            <a id="mobile-toggle" href="#"><span>&#9776;</span></a>
-            <a href="#" onclick="openModal();return false;" class="btn">подробнее</a>
+
+            <a href="#" onclick="openModal();return false;" class="btn">сделать заказ</a>
             <a href="#"><img src="img/top-phone.png" alt=""></a>
+            <a id="mobile-toggle" href="#"><span>&#9776;</span></a>
 
         </div>
     </div>
@@ -98,7 +99,7 @@
     <div class="container">
         <div class="footer">
             <div>
-                <p>© 1999–2017 швейное производство Ависпа</p>
+                <p>© 1999–2019 <span id="footer_text">швейное производство Ависпа</span></p>
                 <p><a class="color-pink" href="mailto:">hello@avispa.ru</a></p>
                 <p><a href="#">Карта сайта</a></p>
             </div>
