--- a/html/services.html
+++ b/html/services.html
@@ -52,11 +52,11 @@
         </div>
         <div class="services">
             <h1 class="mb30">Услуги</h1>
-            <p class="mb50">Швейная фабрика Калисто, предоставляет услуги по пошиву женской, мужской и детской одежды из текстильных и трикотажных полотен. Наше производство оснащено автоматизированной техникой а новые технологии позволяют нам реализовывать самые сложные задачи в любых объемах.
+            <p class="mb50 admin-edit">Швейная фабрика Калисто, предоставляет услуги по пошиву женской, мужской и детской одежды из текстильных и трикотажных полотен. Наше производство оснащено автоматизированной техникой а новые технологии позволяют нам реализовывать самые сложные задачи в любых объемах.
                 Налажены механизмы взаимодействия с заказчиками.
                 По вопросам сотрудничества можно позвонить по телефону: +7 (812) 309-60-33.</p>
             <h3 class="mb20">услуга 1</h3>
-            <p class="mb50">Мы сотрудничаем на выгодных условиях как с небольшими компаниями, так и с крупными фирмами. Нам доверяют многие российские дизайнеры и торговые сети. Европейское качество по приятным ценам — это то, что мы предлагаем своим партнерам! Особые договоренности с поставщиками, позволяют нам быстро подбирать необходимые ткани и фурнитуру.
+            <p class="mb50 admin-edit">Мы сотрудничаем на выгодных условиях как с небольшими компаниями, так и с крупными фирмами. Нам доверяют многие российские дизайнеры и торговые сети. Европейское качество по приятным ценам — это то, что мы предлагаем своим партнерам! Особые договоренности с поставщиками, позволяют нам быстро подбирать необходимые ткани и фурнитуру.
                 Мы реализуем даже самую смелую идею!
                 Налажены механизмы взаимодействия с заказчиками.
                 По вопросам сотрудничества можно позвонить по телефону: +7 (812) 309-60-33.</p>
